CDE-2550-api-documentation-changes
